# code-snippet

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/: globals.css
src/: App.tsx  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  payload.rs
src/components/: Options.tsx  TitleBar.tsx
src/components/icons/: download.tsx  explore.tsx  export.tsx  return.tsx  setting.tsx  share.tsx
src/components/ui/: command.tsx  dialog.tsx  select.tsx  switch.tsx  textarea.tsx
src/constant/: index.ts
src/hooks/: export_dir.ts  use_auto_start.ts  use_state_window.ts  use_view_file.ts
src/lib/: file.ts  localstorage.ts  path.ts  utils.ts
src/locals/: resources.ts
src/pages/: App.tsx  Share.tsx  command_view.tsx
src/pages/App/: command_view.tsx  index.tsx
src/pages/Settings/: Setting_provider.tsx  index.tsx
src/pages/Settings/components/: Setting_item.tsx
src/pages/Settings/contexts/: Font_context.tsx  Language_context.ts  Language_context.tsx  Position_context.ts  Position_context.tsx  Setting_context.ts  theme_context.ts  theme_context.tsx
src/pages/Settings/items/: Auto_start.tsx  Font_family.tsx  Language.tsx  Position.tsx  Short_cut.tsx  Theme.tsx
src/pages/Share/: JsonEditor.tsx  index.tsx
src/process/: Setup.tsx  i18n.tsx
src/router/: index.tsx
src/stores/: code_snippets.ts
